Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/AnonStaticMember_1.out
- compiler.warn.source.no.system.modules.path: 15
AnonStaticMember_1.java:13:20: compiler.err.icls.cant.have.static.decl: compiler.misc.anonymous.class: AnonStaticMember_1$1
1 error
1 warning
